[package]
name = "jsonpath_lib"
version = "0.2.3"
authors = ["Changseok Han <freestrings@gmail.com>"]

description = "It is JsonPath engine written in Rust. it provide a similar API interface in Webassembly and Javascript too. - Webassembly Demo: https://freestrings.github.io/jsonpath"
readme = "README.md"

keywords = ["jsonpath", "json", "webassembly", "nodejs", "javascript"]

repository = "https://github.com/freestrings/jsonpath"
documentation = "https://docs.rs/jsonpath_lib/0.1.0/jsonpath_lib"
license = "MIT"

categories = ["parsing"]

[badges]
travis-ci = { repository = "freestrings/jsonpath", branch = "master" }

[target.'cfg(not(target_env = "sgx"))'.dependencies]
sgx_tstd = { git = "https://github.com/baidu/rust-sgx-sdk", rev="v1.0.8" }

[dependencies]
# log = "0.4"
# serde = { version = "1.0", features = ["derive"] }
# serde_json = { version = "1.0", features = ["preserve_order"] }
# env_logger = "0.6"
# array_tool = "1.0.3"

log = { git = "https://github.com/piotr-roslaniec/log-sgx", tag = "sgx-v1.0.8" }
serde = { git = "https://github.com/piotr-roslaniec/serde-sgx", tag = "sgx-v1.0.8", features = ["derive"] }
serde_json = { git = "https://github.com/piotr-roslaniec/serde-json-sgx", tag = "sgx-v1.0.8", features = ["preserve_order"] }
env_logger = { git = "https://github.com/piotr-roslaniec/env_logger-sgx", tag = "sgx-v1.0.8" }
array_tool = { git = "https://github.com/piotr-roslaniec/array_tool-sgx", tag = "sgx-v1.0.8" }

[dev-dependencies]
bencher = "0.1.5"

[lib]
name = "jsonpath_lib"
path = "src/lib.rs"

[profile.release]
#debug = true
#lto = false
